<resources>
    <string name="app_name">To Meet To Me</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="calendar">캘린더</string>
    <string name="promise">약속</string>
    <string name="my_information">내정보</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">확인</string>
    <string name="popup_title">알림</string>
    <string name="cancel">취소</string>

    <!-- fragment_login -->
    <string name="app_info">&#160;&#160;&#160;&#160;&#160;&#160;만에 잡는 약속, \nProm i로 간편한 일정 관리 \n지금 바로 시작하세요 !</string>
    <string name="join_info">만에 시작하기</string>

    <!-- fragment_main -->
    <string name="calendar_year_month_format">yyyy년 MM월</string>

    <!-- dialog todo -->
    <string name="todo_month_date_format">%s월 %s일 (%s)</string>
    <string name="todo_time_format">%s • %s</string>

    <!-- fragment_group_setting -->
    <string name="what_group_name">그룹 이름은 뭘로 할까요?</string>
    <string name="len_group_name">0/30</string>
    <string name="group_name_example">ex) 건축학개론 팀플 / 프로미초 34기 졸업생</string>

    <!-- dialog_exit_group -->
    <string name="is_exit_group">&#160;그룹을 정말 나가시겠습니까?</string>
    <string name="exit_yes">나가기</string>
    <string name="exit_no">취소</string>

    <!-- fragment_select_promise_date -->
    <string name="info_select_promise_date">약속을 생성할 기간을\n선택해주세요 :)</string>
    <string name="select_promise_date">일정을 취합할 시간대를 선택해주세요!</string>

    <!-- fragment_promise_name -->
    <string name="what_promise_name">약속 이름은 뭘로 할까요?</string>
    <string name="promise_name_example">ex) 프롬이 생일파티, 1차 회의</string>

    <!-- fragment_select_promise_date -->
    <string name="promise_date_format">yyyy년 MM월 dd일</string>
    <string name="promise_date_range_format">%s ~ %s</string>
    <string name="promise_time_format">%s %s</string>

    <!-- dialog_information_todo_scope -->
    <string name="todo_cope_title">일정 공개 범위 설정</string>
    <string name="announce">약속 소요시간을\n선택해주세요 :)</string>

    <!-- fragment_add_friend -->
    <string name="add_friend">친구 신청</string>

</resources>