<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_circle"
        app:tint="@color/mainGreen" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="24dp"
        android:ems="30"
        android:inputType="text"
        android:text="@string/what_promise_name"
        android:textColor="@color/mainLightGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/promise_name_example"
        android:textColor="@color/mainGray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/len_group_name"
        android:textColor="@color/mainLightGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintTop_toTopOf="@+id/editTextText2" />
</androidx.constraintlayout.widget.ConstraintLayout>