<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_group"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_radius15" />

    <ImageButton
        android:id="@+id/btn_set_group_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/shape_circle"
        android:backgroundTint="#D9D9D9"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toStartOf="@+id/img_group"
        app:layout_constraintTop_toTopOf="@+id/img_group" />

    <EditText
        android:id="@+id/etv_group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="24dp"
        android:ems="30"
        android:inputType="text"
        android:text="@string/what_group_name"
        android:textColor="@color/mainLightGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_group" />

    <TextView
        android:id="@+id/tv_group_name_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/pretendard_regular_400"
        android:text="@string/group_name_example"
        android:textColor="@color/mainGray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/etv_group_name"
        app:layout_constraintTop_toBottomOf="@+id/etv_group_name" />

    <TextView
        android:id="@+id/tv_len_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/len_group_name"
        android:textColor="@color/mainLightGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/etv_group_name"
        app:layout_constraintEnd_toEndOf="@+id/etv_group_name"
        app:layout_constraintTop_toTopOf="@+id/etv_group_name" />
</androidx.constraintlayout.widget.ConstraintLayout>