<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_promise_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="105dp"
            android:backgroundTint="@color/mainGreen"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/iv_promise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:src="@drawable/promise_default_image"/>

        </androidx.cardview.widget.CardView>



        <EditText
            android:id="@+id/etv_promise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:ems="30"
            android:inputType="text"
            android:hint="@string/what_promise_name"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_promise_image" />

        <TextView
            android:id="@+id/tv_promise_name_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/pretendard_regular_400"
            android:text="@string/promise_name_example"
            android:textColor="@color/mainGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/etv_promise_name"
            app:layout_constraintTop_toBottomOf="@+id/etv_promise_name" />

        <TextView
            android:id="@+id/tv_len_promise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/len_group_name"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_promise_name_example"
            app:layout_constraintEnd_toEndOf="@+id/etv_promise_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>