<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.promi.view.main.MainFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_navigation_calendar_to_navigation_add_friends"
            app:destination="@id/navigation_add_friends" />
        <action
            android:id="@+id/action_navigation_calendar_to_navigation_notification"
            app:destination="@id/navigation_notification" />
    </fragment>

    <fragment
        android:id="@+id/navigation_all_promises_and_groups"
        android:name="com.promi.view.promise.AllPromisesAndGroupsFragment"
        android:label="@string/promise"
        tools:layout="@layout/fragment_all_promises_and_groups" >
        <action
            android:id="@+id/action_navigation_all_promises_and_groups_to_promiseDetailFragment"
            app:destination="@id/promiseDetailFragment" />
        <action
            android:id="@+id/action_navigation_all_promises_and_groups_to_groupFragment"
            app:destination="@id/groupFragment" />
        <action
            android:id="@+id/action_navigation_all_promises_and_groups_to_settingGroupMemberFragment"
            app:destination="@id/settingGroupMemberFragment" />
        <action
            android:id="@+id/action_navigation_all_promises_and_groups_to_selectGroupFragment"
            app:destination="@id/selectGroupFragment" />
        <action
            android:id="@+id/action_navigation_all_promises_and_groups_to_viewPromiseTimeFragment"
            app:destination="@id/viewPromiseTimeFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_information"
        android:name="com.promi.view.myInformation.MyInformationFragment"
        android:label="@string/my_information"
        tools:layout="@layout/fragment_my_information" >
        <action
            android:id="@+id/action_navigation_my_information_to_myFriendListFragment"
            app:destination="@id/myFriendListFragment" />
        <action
            android:id="@+id/action_navigation_my_information_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_navigation_my_information_to_paletteListFragment"
            app:destination="@id/paletteListFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_friends"
        android:name="com.promi.view.friend.AddFriendsFragment"
        android:label="fragment_add_friends"
        tools:layout="@layout/fragment_add_friends" />
    <fragment
        android:id="@+id/myFriendListFragment"
        android:name="com.promi.view.myInformation.MyFriendListFragment"
        android:label="fragment_my_friend_list"
        tools:layout="@layout/fragment_my_friend_list" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.promi.view.myInformation.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/settingGroupNameFragment"
        android:name="com.promi.view.group.SettingGroupNameFragment"
        android:label="GroupSettingFragment"
        tools:layout="@layout/fragment_setting_group_name">
        <action
            android:id="@+id/action_settingGroupNameFragment_to_navigation_all_promises_and_groups"
            app:destination="@id/navigation_all_promises_and_groups" />
    </fragment>
    <fragment
        android:id="@+id/groupFragment"
        android:name="com.promi.view.group.GroupFragment"
        android:label="fragment_group"
        tools:layout="@layout/fragment_group" >
        <action
            android:id="@+id/action_groupFragment_to_promiseDetailFragment"
            app:destination="@id/promiseDetailFragment" />
        <action
            android:id="@+id/action_groupFragment_to_selectPromiseDateFragment"
            app:destination="@id/settingPromiseDateFragment" />
        <action
            android:id="@+id/action_groupFragment_to_viewPromiseTimeFragment"
            app:destination="@id/viewPromiseTimeFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.promi.view.notification.NotificationFragment"
        android:label="fragment_notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/paletteListFragment"
        android:name="com.promi.ui.myInformation.PaletteListFragment"
        android:label="fragment_palette_list"
        tools:layout="@layout/fragment_palette_list" />
    <fragment
        android:id="@+id/allPromiseFragment"
        android:name="com.promi.view.promise.AllPromiseFragment"
        android:label="AllPromiseFragment"
        tools:layout="@layout/fragment_all_promise"/>
    <fragment
        android:id="@+id/promiseDetailFragment"
        android:name="com.promi.view.promise.PromiseDetailFragment"
        android:label="PromiseDetailFragment"
        tools:layout="@layout/fragment_promise_detail"/>
    <fragment
        android:id="@+id/settingPromiseDateFragment"
        android:name="com.promi.view.promise.SettingPromiseDateFragment"
        android:label="SettingPromiseDateFragment"
        tools:layout="@layout/fragment_setting_promise_date">
        <action
            android:id="@+id/action_settingPromiseDateFragment_to_settingPromiseTimeFragment"
            app:destination="@id/settingPromiseTimeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingPromiseTimeFragment"
        android:name="com.promi.view.promise.SettingPromiseTimeFragment"
        android:label="SettingPromiseTimeFragment"
        tools:layout="@layout/fragment_setting_promise_time">
        <action
            android:id="@+id/action_settingPromiseTimeFragment_to_settingPromiseNameFragment"
            app:destination="@id/settingPromiseNameFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingPromiseNameFragment"
        android:name="com.promi.view.promise.SettingPromiseNameFragment"
        android:label="SettingPromiseNameFragment"
        tools:layout="@layout/fragment_setting_promise_name">
        <action
            android:id="@+id/action_settingPromiseNameFragment_to_groupFragment"
            app:destination="@id/groupFragment"
            app:popUpTo="@id/navigation_all_promises_and_groups"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/allGroupFragment"
        android:name="com.promi.view.promise.AllGroupFragment"
        android:label="AllGroupFragment"
        tools:layout="@layout/fragment_all_group"/>
    <fragment
        android:id="@+id/settingGroupMemberFragment"
        android:name="com.promi.view.group.SettingGroupMemberFragment"
        android:label="SettingGroupMemberFragment"
        tools:layout="@layout/fragment_setting_group_member">
        <action
            android:id="@+id/action_settingGroupMemberFragment_to_settingGroupNameFragment"
            app:destination="@id/settingGroupNameFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectGroupFragment"
        android:name="com.promi.view.group.SelectGroupFragment"
        android:label="SelectGroupFragment"
        tools:layout="@layout/fragment_select_group">
        <action
            android:id="@+id/action_selectGroupFragment_to_selectPromiseDateFragment"
            app:destination="@id/settingPromiseDateFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewPromiseTimeFragment"
        android:name="com.promi.view.promise.ViewPromiseTimeFragment"
        android:label="ViewPromiseTimeFragment" />
</navigation>